--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,6 +8,7 @@ RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&topic=$2&slug=$
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=$2&slug=$3&page=$4 [L]
 
 RewriteRule ^se_connecter$ /index.php?login [L]
+RewriteRule ^se_deconnecter$ /index.php?logout [L]
 
 RewriteRule ^mp$ /index.php?mp [L]
 RewriteRule ^mp/([0-9]+)$ /index.php?mp=$1 [L]
