--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,6 +10,8 @@ RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=
 RewriteRule ^se_connecter$ /index.php?login [L]
 RewriteRule ^se_deconnecter$ /index.php?logout [L]
 
+RewriteRule ^ref$ /ref.php [L]
+
 RewriteRule ^mp$ /index.php?mp [L]
 RewriteRule ^mp/([0-9]+)$ /index.php?mp=$1 [L]
 RewriteRule ^mp/([0-9]+)/([0-9]+)$ /index.php?mp=$1&id=$2 [L]
