--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,7 +8,7 @@ RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&topic=$2&slug=$
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=$2&slug=$3&page=$4 [L]
 
 RewriteRule ^se_connecter$ /index.php?login [L]
-RewriteRule ^se_deconnecter$ /index.php?logout [L]
+RewriteRule ^se_deconnecter/([0-9a-f]+)-([0-9]+)-([0-9a-f]+)$ /index.php?logout&hash=$1&ts=$2&rand=$3 [L]
 
 RewriteRule ^ref$ /ref.php [L]
 
