--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,6 +10,8 @@ RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=
 RewriteRule ^se_connecter$ /index.php?login [L]
 RewriteRule ^se_deconnecter/([0-9a-f]+)-([0-9]+)-([0-9a-f]+)$ /index.php?logout&hash=$1&ts=$2&rand=$3 [L]
 
+RewriteRule ^news$ /index.php?news [L]
+
 RewriteRule ^ref$ /ref.php [L]
 
 RewriteRule ^mp$ /index.php?mp [L]
