--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,5 +19,7 @@ RewriteRule ^mp$ /index.php?mp [L]
 RewriteRule ^mp/([0-9]+)$ /index.php?mp=$1 [L]
 RewriteRule ^mp/([0-9]+)/([0-9]+)$ /index.php?mp=$1&id=$2 [L]
 
+RewriteRule ^profil/([0-9a-zA-Z-_[\]]{3,15})$ /index.php?profil=$1 [L]
+
 RewriteRule ^scripts/(.+)-([0-9]+)\.js$ /scripts/$1.js [L]
 RewriteRule ^style-([0-9]+)\.css$ /style.css [L]
