--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,6 +10,7 @@ RewriteRule ^apropos$ /index.php?apropos [L]
 RewriteRule ^recherche_forum$ /index.php?recherche_forum [L]
 RewriteRule ^smileys$ /index.php?smileys [L]
 RewriteRule ^moderation$ /index.php?moderation [L]
+RewriteRule ^kick/([0-9a-zA-Z-_[\]]{3,15})$ /index.php?kick=$1 [QSA] [L]
 
 RewriteRule ^([0-9]+)$ /index.php?forum=$1 [L]
 RewriteRule ^([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&slug=$2 [L]
