--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 RewriteRule ^$ /salespage.php [L]
 
 RewriteRule ^connexion$ /connexion.php [L]
-RewriteRule ^deconnexion/([0-9a-f]+)-([0-9]+)-([0-9a-f]+)$ /deconnexion.php?hash=$1&ts=$2&rand=$3 [L]
+RewriteRule ^deconnexion$ /deconnexion.php [L]
 
 RewriteRule ^accueil$ /index.php [L]
 RewriteRule ^apropos$ /index.php?apropos [L]
@@ -23,11 +23,6 @@ RewriteRule ^([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&slug=$2&page=$3
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&topic=$2&slug=$3 [L]
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=$2&slug=$3&page=$4 [L]
 
-RewriteRule ^mp$ /index.php?mp [L]
-RewriteRule ^mp/([0-9]+)$ /index.php?mp=$1 [L]
-RewriteRule ^mp/([0-9]+)/([0-9]+)$ /index.php?mp=$1&id=$2 [L]
-
-RewriteRule ^profil/([0-9a-zA-Z-_[\]]{3,15})$ /index.php?profil=$1 [L]
 RewriteRule ^@([0-9a-zA-Z-_[\]]{3,15})$ /index.php?profil=$1 [L]
 
 RewriteRule ^scripts/(.+)\.([0-9]+)\.js$ /scripts/$1.js [L]
