--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,29 +1,22 @@
 RewriteEngine On
 
 RewriteRule ^$ /salespage.php [L]
+RewriteRule ^(connexion|deconnexion)$ /$1.php [L]
 
-RewriteRule ^connexion$ /connexion.php [L]
-RewriteRule ^deconnexion$ /deconnexion.php [L]
+RewriteRule ^(accueil|apropos|recherche_forum|smileys|sondage|moderation)$ /index.php?page=$1 [QSA] [L]
 
-RewriteRule ^accueil$ /index.php [L]
-RewriteRule ^apropos$ /index.php?apropos [L]
-RewriteRule ^recherche_forum$ /index.php?recherche_forum [L]
-RewriteRule ^smileys$ /index.php?smileys [L]
-RewriteRule ^sondage$ /index.php?sondage [L]
+RewriteRule ^([0-9]+)$ /index.php?page=forum&forum=$1 [L]
+RewriteRule ^([0-9]+)-([a-z0-9-]+)$ /index.php?page=forum&forum=$1&slug=$2 [L]
+RewriteRule ^([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?page=forum&forum=$1&slug=$2&forum_page=$3 [L]
 
-RewriteRule ^moderation$ /index.php?moderation [L]
-RewriteRule ^kick/([0-9a-zA-Z-_[\]]{3,15})$ /index.php?kick=$1 [QSA] [L]
-RewriteRule ^sanctionner/([0-9]+)$ /index.php?sanctionner=$1 [QSA] [L]
-RewriteRule ^lock/([0-9]+)$ /index.php?lock=$1 [QSA] [L]
+RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?page=topic&forum=$1&topic=$2&slug=$3 [L]
+RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?page=topic&forum=$1&topic=$2&slug=$3&topic_page=$4 [L]
 
-RewriteRule ^([0-9]+)$ /index.php?forum=$1 [L]
-RewriteRule ^([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&slug=$2 [L]
-RewriteRule ^([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&slug=$2&page=$3 [L]
-
-RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?forum=$1&topic=$2&slug=$3 [L]
-RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?forum=$1&topic=$2&slug=$3&page=$4 [L]
-
-RewriteRule ^@([0-9a-zA-Z-_[\]]{3,15})$ /index.php?profil=$1 [L]
+RewriteRule ^@([0-9a-zA-Z-_[\]]{3,15})$ /index.php?page=profil&pseudo=$1 [L]
 
 RewriteRule ^scripts/(.+)\.([0-9]+)\.js$ /scripts/$1.js [L]
 RewriteRule ^styles/(.+)\.([0-9]+)\.css$ /styles/$1.css [L]
+
+RewriteRule ^kick/([0-9a-zA-Z-_[\]]{3,15})$ /index.php?page=kick&pseudo=$1 [QSA] [L]
+RewriteRule ^sanctionner/([0-9]+)$ /index.php?page=sanctionner&message_id=$1 [QSA] [L]
+RewriteRule ^lock/([0-9]+)$ /index.php?page=lock&topic_id=$1 [QSA] [L]
