--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,7 +12,7 @@ RewriteRule ^([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?page=forum&forum=$1&slug
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)$ /index.php?page=topic&forum=$1&topic=$2&slug=$3 [L]
 RewriteRule ^([0-9]+)/([0-9]+)-([a-z0-9-]+)/([0-9]+)$ /index.php?page=topic&forum=$1&topic=$2&slug=$3&topic_page=$4 [L]
 
-RewriteRule ^@([0-9a-zA-Z-_[\]]{3,15})$ /index.php?page=profil&pseudo=$1 [L]
+RewriteRule ^@([0-9a-zA-Z-_[\]]{3,15})$ /index.php?page=profil&pseudo=$1 [QSA] [L]
 
 RewriteRule ^scripts/(.+)\.([0-9]+)\.js$ /scripts/$1.js [L]
 RewriteRule ^styles/(.+)\.([0-9]+)\.css$ /styles/$1.css [L]
